tests/mm0_mmu/fail/bad-sort2341.mmu
-- bad modifier order
(sort s2341 strict provable free pure)